# diy-emokit

./: .gitignore  CMakeLists.txt  README.md
emokit/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt~  debug.c  main.c
